# agent-007

./: pyproject.toml
src/: main.py
src/ai_agent/: agent.py  providers.py
src/ai_agent/providers/: gemini.py  llm_provider.py  providerfactory.py
src/ai_agent/tools/: tools_base.py
src/cli/: cli.py
src/core/agent/: agent.py
src/core/providers/: claude.py  openai.py  openrouter.py
src/core/tools/: tools.py
src/server/: server.py
